# GtestDemo

./: Gtest测试整理.md  README.md
project/: CMakeLists.txt
project/source/: Makefile  TestAll.cpp  functions.cpp  functions.h  functionsTest.cpp  gmockTest.cpp
